@@ -9,10 +9,11 @@
 [[release-next]]
 [float]
 === Unreleased
+https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev2\...master[Check the HEAD diff]
+
 
  * added a background thread to process the transactions queue every 60 seconds (configurable) ({pull}68[#68])
-
-https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev1\...master[Check the HEAD diff]
+ * adapted trace context for SQL traces to new API ({pull}77[#77])
 
 [[release-v1.0.0.dev2]]
 [float]
